// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  className="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    className="Select"
    data-test-id="cf-ui-select"
    disabled={false}
    htmlFor="optionSelect"
    id="optionSelect"
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  >
    <Option
      value="optionOne"
    >
      Option One
    </Option>
  </select>
  <Icon
    color="muted"
    extraClassNames="Select__icon"
    icon="ArrowDown"
    size="small"
    testId="cf-ui-icon"
  />
</div>
`;

exports[`renders the component as required 1`] = `
<div
  className="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    className="Select"
    data-test-id="cf-ui-select"
    disabled={false}
    htmlFor="optionSelect"
    id="optionSelect"
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={true}
  >
    <Option
      value="optionOne"
    >
      Option One
    </Option>
  </select>
  <Icon
    color="muted"
    extraClassNames="Select__icon"
    icon="ArrowDown"
    size="small"
    testId="cf-ui-icon"
  />
</div>
`;

exports[`renders the component in disabled state 1`] = `
<div
  className="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    className="Select Select--disabled"
    data-test-id="cf-ui-select"
    disabled={true}
    htmlFor="optionSelect"
    id="optionSelect"
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  >
    <Option
      value="optionOne"
    >
      Option One
    </Option>
  </select>
  <Icon
    color="muted"
    extraClassNames="Select__icon"
    icon="ArrowDown"
    size="small"
    testId="cf-ui-icon"
  />
</div>
`;

exports[`renders the component with a value 1`] = `
<div
  className="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    className="Select"
    data-test-id="cf-ui-select"
    disabled={false}
    htmlFor="optionSelect"
    id="optionSelect"
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    value="value1"
  >
    <Option
      value="optionOne"
    >
      Option One
    </Option>
  </select>
  <Icon
    color="muted"
    extraClassNames="Select__icon"
    icon="ArrowDown"
    size="small"
    testId="cf-ui-icon"
  />
</div>
`;

exports[`renders the component with an extra class name 1`] = `
<div
  className="Select__wrapper Select--full extraClassName"
>
  <select
    aria-label="optionSelect"
    className="Select"
    data-test-id="cf-ui-select"
    disabled={false}
    htmlFor="optionSelect"
    id="optionSelect"
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  >
    <Option
      value="optionOne"
    >
      Option One
    </Option>
  </select>
  <Icon
    color="muted"
    extraClassNames="Select__icon"
    icon="ArrowDown"
    size="small"
    testId="cf-ui-icon"
  />
</div>
`;

exports[`renders the component with an onClick 1`] = `
<div
  className="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    className="Select"
    data-test-id="cf-ui-select"
    disabled={false}
    htmlFor="optionSelect"
    id="optionSelect"
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    required={false}
  >
    <Option
      value="optionOne"
    >
      Option One
    </Option>
  </select>
  <Icon
    color="muted"
    extraClassNames="Select__icon"
    icon="ArrowDown"
    size="small"
    testId="cf-ui-icon"
  />
</div>
`;

exports[`renders the component with error 1`] = `
<div
  className="Select__wrapper Select--full"
>
  <select
    aria-label="optionSelect"
    className="Select Select--negative"
    data-test-id="cf-ui-select"
    disabled={false}
    htmlFor="optionSelect"
    id="optionSelect"
    name="optionSelect"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  >
    <Option
      value="optionOne"
    >
      Option One
    </Option>
  </select>
  <Icon
    color="muted"
    extraClassNames="Select__icon"
    icon="ArrowDown"
    size="small"
    testId="cf-ui-icon"
  />
</div>
`;
